--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="/socket.io/socket.io.js"></script>
-    <script defer src="./js/main.js"></script>
-    <script defer src="./js/messages.js"></script>
-    <link rel="stylesheet" href="./css/style.css" />
+    <script defer src="./public/js/main.js"></script>
+    <script defer src="./public/js/messages.js"></script>
+    <link rel="stylesheet" href="./public/css/style.css" />
     <title>test messages</title>
   </head>
   <body>
