🙈🍄 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <main>
       <div id="messages"></div>
       <form id="messagesForm">
-        <input type="text" name="msg" id="msg" />
+        <textarea type="text" name="msg" id="msg"> </textarea>
         <button type="submit" id="send">Send</button>
       </form>
     </main>
